changes in log.txt writing and console output
changes in log.txt writing and console output

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,7 @@ Temporary Items
 .idea/ciback.iml
 .idea/inspectionProfiles/Project_Default.xml
 *.txt
+R1-confg
+.idea/dictionaries/Svilen.xml
+R4-confg
+R3-confg
